--- a/quickSEO.html
+++ b/quickSEO.html
@@ -557,32 +557,31 @@
                     <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">GSTIN:
                         33AHDPF3055G1ZV</span>
                 </p>
-                <ul
-                    class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
                     <!-- <p>GSTIN: 33AHDPF3055GIZV </p> -->
-
                     <!-- <li>
-                            <!-- <a href="#" class="hover:underline me-4 md:me-6">About</a> -->
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">Mail Us</a>
+                      <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                    </li> -->
+                    <li class="me-4 md:me-6">
+                      <p>contact@techedilite.co</p>
                     </li>
                     <li>
-                        <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6">Twitter</a>
+                      <a href="https://x.com/TechEdilite" class="hover:underline me-4 md:me-6" target="_blank" rel="noopener noreferrer">Twitter</a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/techedilite/"
-                            class="hover:underline me-4 md:me-6">Instagram</a>
+                      <a href="https://www.instagram.com/techedilite/" class="hover:underline me-4 md:me-6" target="_blank" rel="noopener noreferrer">Instagram</a>
                     </li>
                     <!-- <li>
-                            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-                        </li>
-                        <li>
-                            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-                        </li>
-                        <li>
-                            <a href="#" class="hover:underline">Contact</a>
-                        </li> -->
-                </ul>
+                      <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                    </li>
+                    <li>
+                      <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                    </li>
+                    <li>
+                      <a href="#" class="hover:underline">Contact</a>
+                    </li> -->
+                  </ul>
+                
             </div>
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
             <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="/"
