--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
                   </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-[#001c55] mb-2">Email Us</h3>
-                <p class="text-gray-600">info@techedilite.com</p>
+                <p class="text-gray-600">contact@techedilite.co</p>
               </div>
               
               <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1 text-center">
