--- a/index.html
+++ b/index.html
@@ -878,17 +878,17 @@
                       <!-- Stats / Numbers -->
                       <div class="grid grid-cols-3 gap-4 mt-8">
                           <div class="bg-gray-50 p-4 rounded-lg text-center">
-                              <div class="text-purple-600 font-bold text-2xl">50+</div>
+                              <div class="text-purple-600 font-bold text-2xl">10+</div>
                               <div class="text-gray-600 text-sm">Projects</div>
                           </div>
                           <div class="bg-gray-50 p-4 rounded-lg text-center">
                               <div class="text-pink-600 font-bold text-2xl">15+</div>
                               <div class="text-gray-600 text-sm">Team Members</div>
                           </div>
-                          <div class="bg-gray-50 p-4 rounded-lg text-center">
+                          <!-- <div class="bg-gray-50 p-4 rounded-lg text-center">
                               <div class="text-indigo-600 font-bold text-2xl">8+</div>
                               <div class="text-gray-600 text-sm">Years Experience</div>
-                          </div>
+                          </div> -->
                       </div>
                   </div>
                   
