--- a/index.html
+++ b/index.html
@@ -1721,7 +1721,7 @@
                   </svg>
                 </div>
                 <h3 class="text-xl font-semibold text-[#001c55] mb-2">Call Us</h3>
-                <p class="text-gray-600">+1 (234) 567-8900</p>
+                <p class="text-gray-600">+91 96777 45956</p>
               </div>
               
               <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition-all duration-300 transform hover:-translate-y-1 text-center">
