--- a/index.html
+++ b/index.html
@@ -2134,7 +2134,7 @@
                     </div> -->
                   </div>
                   <div class="p-5">
-                    <a href="http://starschool.42web.io/?i=1" target="_blank" rel="noopener noreferrer">
+                    <a href="https://starschoolcbse.com" target="_blank" rel="noopener noreferrer">
                       <h3 class="text-xl font-bold text-center text-gray-900 mb-2 hover:text-blue-600 transition-colors">Star School CBSE</h3>
                     </a>
                     <p class="text-gray-600 text-center mb-4">Educational institution website with comprehensive management features</p>
