--- a/aboutLearn3.html
+++ b/aboutLearn3.html
@@ -45,7 +45,7 @@
                       Home
                       <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-indigo-500 transition-all duration-300 group-hover:w-full"></span>
                   </a>
-                  <a href="/learn.html#courses" class="text-gray-700 hover:text-indigo-600 font-medium relative group py-2">
+                  <a href="/learn.html#events" class="text-gray-700 hover:text-indigo-600 font-medium relative group py-2">
                       Events
                       <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-indigo-500 transition-all duration-300 group-hover:w-full"></span>
                   </a>
