--- a/learn.html
+++ b/learn.html
@@ -55,7 +55,7 @@
                     Home
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-indigo-500 transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#courses" class="text-gray-700 hover:text-indigo-600 font-medium relative group py-2">
+                <a href="#events" class="text-gray-700 hover:text-indigo-600 font-medium relative group py-2">
                     Events
                     <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-indigo-500 transition-all duration-300 group-hover:w-full"></span>
                 </a>
@@ -96,7 +96,7 @@
     <div class="md:hidden hidden bg-white py-2 shadow-inner transform transition-all duration-300 opacity-0 -translate-y-4" id="mobile-menu">
         <div class="container mx-auto px-4 flex flex-col space-y-4 py-3">
             <a href="#hero" class="text-gray-700 hover:text-indigo-600 font-medium px-4 py-2 rounded-lg hover:bg-indigo-50 transition-colors">Home</a>
-            <a href="#courses" class="text-gray-700 hover:text-indigo-600 font-medium px-4 py-2 rounded-lg hover:bg-indigo-50 transition-colors">Events</a>
+            <a href="#events" class="text-gray-700 hover:text-indigo-600 font-medium px-4 py-2 rounded-lg hover:bg-indigo-50 transition-colors">Events</a>
             <a href="/aboutLearn3.html" class="text-gray-700 hover:text-indigo-600 font-medium px-4 py-2 rounded-lg hover:bg-indigo-50 transition-colors">About</a>
         </div>
     </div>
@@ -197,7 +197,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 </p>
                 
                 <div class="flex flex-col sm:flex-row justify-center lg:justify-start gap-4">
-                    <a href="#courses" class="px-8 py-3 bg-white text-indigo-700 font-semibold rounded-lg hover:bg-indigo-50 transition duration-300">Explore Events</a>
+                    <a href="#events" class="px-8 py-3 bg-white text-indigo-700 font-semibold rounded-lg hover:bg-indigo-50 transition duration-300">Explore Events</a>
                     <!-- <a href="#voting" class="px-8 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition duration-300">Vote Now</a> -->
                 </div>
             </div>
@@ -747,7 +747,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </section>
 
      <!-- Courses Section -->
-     <section id="courses" class="py-24 relative bg-gradient-to-br from-gray-50 via-blue-50 to-purple-50 overflow-hidden">
+     <section id="events" class="py-24 relative bg-gradient-to-br from-gray-50 via-blue-50 to-purple-50 overflow-hidden">
         <!-- Animated Background Elements -->
         <div class="absolute inset-0">
             <!-- Floating geometric shapes -->
