--- a/learn.html
+++ b/learn.html
@@ -844,7 +844,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                 </h3>
                                 
                                 <p class="text-gray-600 mb-6 text-lg leading-relaxed">
-                                    Master blockchain fundamentals, smart contracts, and decentralized applications with hands-on projects.
+                                   Join this beginner-friendly event to explore what blockchain is, how it works, and how it rose to prominence. Designed specifically for newcomers, the event will cover blockchain fundamentals, smart contracts, and decentralized applications through easy-to-follow explanations.
                                 </p>
                                 
                                 <!-- Interactive elements -->
