--- a/learn.html
+++ b/learn.html
@@ -42,9 +42,9 @@
     <div class="container mx-auto px-4 md:px-6 py-4 flex justify-between items-center">
         <!-- Logo & Brand -->
         <div class="flex items-center space-x-3">
-            <div class="w-12 h-12 rounded-full bg-gradient-to-r from-indigo-500 to-purple-600 flex items-center justify-center shadow-md transition-transform hover:scale-105">
-                <img src="./L.png" alt="L3 Logo" class="w-10 h-10 rounded-full">
-            </div>
+            <!-- <div class="w-12 h-12 rounded-full bg-gradient-to-r from-indigo-500 to-purple-600 flex items-center justify-center shadow-md transition-transform hover:scale-105"> -->
+                <img src="./L3.png" alt="L3 Logo" class="w-10 h-10 rounded-full">
+            <!-- </div> -->
             <span class="font-bold text-2xl text-gray-800 tracking-tight">Learn3 Studio</span>
         </div>
         
