--- a/index.html
+++ b/index.html
@@ -1795,11 +1795,11 @@
               </div>
               
               <!-- View All Services Button -->
-              <div class="text-center mt-12">
+<!--               <div class="text-center mt-12">
                 <a href="#" class="inline-flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10 transition-colors duration-300 shadow-md hover:shadow-lg">
                   View All Services
                 </a>
-              </div>
+              </div> -->
             </div>
           </section>
           
