--- a/learn.html
+++ b/learn.html
@@ -761,7 +761,7 @@ document.addEventListener('DOMContentLoaded', function() {
                             <p class="text-white/80 text-sm mb-3">
                                 Join our <span class="font-semibold text-emerald-300">WhatsApp group</span> for instant notifications, quick discussions, and direct community support!
                             </p>
-                            <a href="https://chat.whatsapp.com/GRazHYpv5XV2IKvgAQJXLt?mode=r_c" 
+                            <a href="https://chat.whatsapp.com/FqeJr5yin31IQCgvh9rSFL" 
                                target="_blank"
                                rel="noopener noreferrer"
                                class="inline-flex items-center bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded-lg transition-all duration-300 transform hover:scale-105 text-sm group/whatsapp">
