--- a/learn.html
+++ b/learn.html
@@ -1319,9 +1319,11 @@ document.addEventListener('DOMContentLoaded', function() {
                                     </div>
                                     
                                     <!-- Action button -->
-                                    <a href="https://lu.ma/ksrvd02w" 
+                                    <a   href="https://lu.ma/event/evt-kSuloaEdDnRaddl"
+
                                        class="luma-checkout--button block w-full text-center bg-gradient-to-r from-blue-600 to-purple-600 hover:from-purple-600 hover:to-blue-600 text-white font-bold py-3 px-6 rounded-xl transition-all duration-300 transform hover:scale-105 hover:shadow-2xl"
-                                       data-luma-action="checkout" data-luma-event-id="evt-JOonjZXdMiX5ZZB">
+                                       data-luma-action="checkout"   data-luma-event-id="evt-kSuloaEdDnRaddl"
+                                       >
                                         <span class="flex items-center justify-center">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
