--- a/index.html
+++ b/index.html
@@ -1979,7 +1979,7 @@
                 <div class="absolute inset-0 bg-gradient-to-t from-black/30 via-transparent to-transparent opacity-0 group-hover:opacity-100 transition duration-500"></div>
               </div>
               <div class="p-6 flex-1 flex flex-col">
-                <a href="https://starschoolcbse.com" target="_blank" rel="noopener noreferrer">
+                <a href="http://cloudscapeconstructions.com" target="_blank" rel="noopener noreferrer">
                   <h3 class="text-xl font-bold text-gray-900 mb-2 hover:text-blue-600 transition-colors relative">
                     Cloudscape Constructions
                     <span class="absolute -top-1 -right-1 w-2 h-2 bg-yellow-400 rounded-full animate-pulse"></span>
