--- a/index.html
+++ b/index.html
@@ -6,91 +6,71 @@
     <link rel="icon" type="image/png" href="./favTE.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Title Tag (SEO) -->
-<title>TechEdilite | Affordable Software Development in Hosur, Tamil Nadu | BuildPulse & UnitPulse</title>
+<title>TechEdilite | Tech Edilite | TECHEDILITE - Affordable Software Development Hosur Tamil Nadu | BuildPulse UnitPulse</title>
 
-<!-- SEO Meta Tags -->
+<!-- SEO Meta Tags - Enhanced with all name variations -->
 <meta name="description"
-   content="TechEdilite - Leading software development company in Hosur, Tamil Nadu, India. Creators of BuildPulse construction app & UnitPulse inventory system. Cheap, reliable digital solutions for businesses. Contact: +91 96777 45956" />
+   content="TechEdilite (Tech Edilite, TECHEDILITE) - Leading software development company in Hosur, Tamil Nadu, India. Creators of BuildPulse construction app & UnitPulse inventory system. Cheap, reliable digital solutions for businesses. Contact: +91 96777 45956" />
 <meta name="keywords"
-   content="TechEdilite, Tech Edilite, software development Hosur, Tamil Nadu software company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development Hosur, construction management software, inventory management system, custom software Tamil Nadu, IT consulting Hosur, budget software solutions" />
+   content="TechEdilite, Tech Edilite, TECHEDILITE, techedilite, tech edilite, TECH EDILITE, TechEdilite software, Tech Edilite company, software development Hosur, Tamil Nadu software company, BuildPulse app, UnitPulse app, cheap software development India, reliable digital solutions, affordable web development, mobile app development Hosur, construction management software, inventory management system, custom software Tamil Nadu, IT consulting Hosur, budget software solutions, TechEdilite Hosur, Tech Edilite Tamil Nadu" />
 <meta name="author" content="TechEdilite">
 <meta name="geo.region" content="IN-TN" />
 <meta name="geo.placename" content="Hosur, Tamil Nadu, India" />
 <meta name="geo.position" content="12.1264;77.8267" />
 <meta name="ICBM" content="12.1264, 77.8267" />
 
+<!-- Brand Name Variations (for search engines) -->
+<meta name="brand" content="TechEdilite, Tech Edilite, TECHEDILITE" />
+<meta name="company" content="TechEdilite" />
+<meta name="business-name" content="Tech Edilite" />
+<meta name="organization" content="TECHEDILITE" />
+
 <!-- Open Graph Meta Tags for Social Media Sharing -->
-<meta property="og:title" content="TechEdilite | Software Development Company Hosur, Tamil Nadu" />
+<meta property="og:title" content="TechEdilite | Tech Edilite | Software Development Company Hosur, Tamil Nadu" />
 <meta property="og:description"
-   content="TechEdilite provides affordable and reliable digital solutions in Hosur, Tamil Nadu. Featuring BuildPulse construction management and UnitPulse inventory apps. Call +91 96777 45956" />
-<meta property="og:image" content="./favTE.png" />
-<meta property="og:url" content="https://www.techedilite.com" />
+   content="TechEdilite (Tech Edilite) provides affordable and reliable digital solutions in Hosur, Tamil Nadu. Featuring BuildPulse construction management and UnitPulse inventory apps. Call +91 96777 45956" />
+<meta property="og:image" content="https://www.techedilite.co/favTE.png" />
+<meta property="og:url" content="https://www.techedilite.co" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_IN" />
+<meta property="og:site_name" content="TechEdilite" />
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="TechEdilite | Affordable Software Solutions Hosur" />
-<meta name="twitter:description" content="Software development company in Hosur, Tamil Nadu. BuildPulse & UnitPulse apps. Reliable & budget-friendly. +91 96777 45956" />
-<meta name="twitter:image" content="./favTE.png" />
+<meta name="twitter:title" content="TechEdilite | Tech Edilite | Affordable Software Solutions Hosur" />
+<meta name="twitter:description" content="TechEdilite (Tech Edilite) software development company in Hosur, Tamil Nadu. BuildPulse & UnitPulse apps. Reliable & budget-friendly. +91 96777 45956" />
+<meta name="twitter:image" content="https://www.techedilite.co/favTE.png" />
+<meta name="twitter:url" content="https://www.techedilite.co" />
 
 <!-- Contact & Business Information -->
 <meta name="contact" content="contact@techedilite.co" />
 <meta name="phone" content="+91 96777 45956" />
 <meta name="address" content="Hosur, Tamil Nadu, India" />
 
-<!-- Local Business Schema Markup -->
-<script type="application/ld+json">
-{
- "@context": "https://schema.org",
- "@type": "SoftwareApplication",
- "name": "TechEdilite",
- "alternateName": "Tech Edilite",
- "description": "Affordable and reliable software development company in Hosur, Tamil Nadu, India. Creators of BuildPulse construction management app and UnitPulse inventory management system.",
- "url": "https://www.techedilite.com",
- "applicationCategory": "BusinessApplication",
- "operatingSystem": "Web, iOS, Android",
- "offers": {
-   "@type": "Offer",
-   "description": "Cheap and reliable digital solutions for businesses",
-   "priceRange": "$$"
- },
- "creator": {
-   "@type": "Organization",
-   "name": "TechEdilite",
-   "alternateName": "Tech Edilite",
-   "address": {
-     "@type": "PostalAddress",
-     "addressLocality": "Hosur",
-     "addressRegion": "Tamil Nadu",
-     "addressCountry": "India"
-   },
-   "contactPoint": {
-     "@type": "ContactPoint",
-     "telephone": "+91 96777 45956",
-     "email": "contact@techedilite.co",
-     "contactType": "Customer Service"
-   }
- }
-}
-</script>
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.techedilite.co" />
 
-<!-- Local Business Schema -->
+<!-- Additional SEO Tags -->
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<meta name="googlebot" content="index, follow" />
+<meta name="revisit-after" content="3 days" />
+
+<!-- Enhanced Local Business Schema Markup -->
 <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "LocalBusiness",
  "name": "TechEdilite",
- "alternateName": "Tech Edilite",
- "description": "Software development company specializing in affordable and reliable digital solutions",
- "url": "https://www.techedilite.com",
+ "alternateName": ["Tech Edilite", "TECHEDILITE", "techedilite", "tech edilite", "TECH EDILITE"],
+ "description": "Software development company specializing in affordable and reliable digital solutions. Known as TechEdilite, Tech Edilite, or TECHEDILITE.",
+ "url": "https://www.techedilite.co",
  "telephone": "+91 96777 45956",
  "email": "contact@techedilite.co",
  "address": {
    "@type": "PostalAddress",
    "addressLocality": "Hosur",
    "addressRegion": "Tamil Nadu",
+   "postalCode": "635109",
    "addressCountry": "IN"
  },
  "geo": {
@@ -104,7 +84,7 @@
      "name": "Hosur"
    },
    {
-     "@type": "State",
+     "@type": "State", 
      "name": "Tamil Nadu"
    },
    {
@@ -117,93 +97,139 @@
    "Web Development", 
    "Mobile App Development",
    "Custom Software Solutions",
-   "IT Consulting"
+   "IT Consulting",
+   "BuildPulse Development",
+   "UnitPulse Development"
  ],
  "priceRange": "$$",
- "openingHours": "Mo-Sa 09:00-18:00"
+ "openingHours": "Mo-Sa 09:00-18:00",
+ "sameAs": [
+   "https://www.techedilite.co"
+ ],
+ "hasOfferCatalog": {
+   "@type": "OfferCatalog",
+   "name": "Software Development Services",
+   "itemListElement": [
+     {
+       "@type": "Offer",
+       "itemOffered": {
+         "@type": "Service",
+         "name": "BuildPulse Construction Management"
+       }
+     },
+     {
+       "@type": "Offer", 
+       "itemOffered": {
+         "@type": "Service",
+         "name": "UnitPulse Inventory Management"
+       }
+     }
+   ]
+ }
 }
 </script>
 
-<!-- Product Schema for BuildPulse -->
+<!-- Organization Schema with all name variations -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "Organization",
+ "name": "TechEdilite",
+ "alternateName": ["Tech Edilite", "TECHEDILITE", "techedilite", "tech edilite", "TECH EDILITE"],
+ "description": "TechEdilite (also known as Tech Edilite or TECHEDILITE) is a software development company in Hosur, Tamil Nadu specializing in affordable digital solutions.",
+ "url": "https://www.techedilite.co",
+ "logo": "https://www.techedilite.co/favTE.png",
+ "contactPoint": {
+   "@type": "ContactPoint",
+   "telephone": "+91 96777 45956",
+   "email": "contact@techedilite.co",
+   "contactType": "Customer Service",
+   "availableLanguage": ["English", "Tamil"]
+ },
+ "address": {
+   "@type": "PostalAddress",
+   "addressLocality": "Hosur",
+   "addressRegion": "Tamil Nadu",
+   "addressCountry": "IN"
+ },
+ "founder": {
+   "@type": "Person",
+   "name": "TechEdilite Founder"
+ },
+ "foundingDate": "2020",
+ "legalName": "TechEdilite",
+ "slogan": "Affordable and Reliable Digital Solutions"
+}
+</script>
+
+<!-- Software Application Schema for BuildPulse -->
 <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "SoftwareApplication",
  "name": "BuildPulse",
- "description": "Construction management application for inventory and financial reporting",
+ "description": "Construction management application for inventory and financial reporting developed by TechEdilite (Tech Edilite)",
  "applicationCategory": "BusinessApplication",
- "operatingSystem": "Web, Mobile",
+ "operatingSystem": "Web, iOS, Android",
  "creator": {
    "@type": "Organization",
-   "name": "TechEdilite"
+   "name": "TechEdilite",
+   "alternateName": ["Tech Edilite", "TECHEDILITE"]
+ },
+ "offers": {
+   "@type": "Offer",
+   "price": "Contact for pricing",
+   "priceCurrency": "INR"
  }
 }
 </script>
 
-<!-- Product Schema for UnitPulse -->
+<!-- Software Application Schema for UnitPulse -->
 <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "SoftwareApplication", 
  "name": "UnitPulse",
- "description": "Inventory management system for enterprise solutions",
+ "description": "Inventory management system for enterprise solutions developed by TechEdilite (Tech Edilite)",
  "applicationCategory": "BusinessApplication",
- "operatingSystem": "Web, Mobile",
+ "operatingSystem": "Web, iOS, Android",
  "creator": {
    "@type": "Organization",
-   "name": "TechEdilite"
+   "name": "TechEdilite",
+   "alternateName": ["Tech Edilite", "TECHEDILITE"]
+ },
+ "offers": {
+   "@type": "Offer",
+   "price": "Contact for pricing", 
+   "priceCurrency": "INR"
  }
 }
 </script>
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TechEdilite | Software Development Firm" />
-    <meta name="twitter:description"
-        content="TechEdilite provides software development services including web development, mobile apps, and IT consulting for businesses." />
-    <meta name="twitter:image" content="./favTE.png" />
-    <meta name="twitter:url" content="https://www.techedilite.com" />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./favTE.png" />
-
-    <!-- External CSS and Scripts -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Organization",
-            "name": "TechEdilite",
-            "url": "https://www.techedilite.com",
-            "logo": "./favTE.png",
-            "sameAs": [
-                "https://www.facebook.com/TechEdilite",
-                "https://twitter.com/TechEdilite",
-                "https://www.linkedin.com/company/TechEdilite"
-            ],
-            "contactPoint": {
-                "@type": "ContactPoint",
-                "telephone": "+1-800-123-4567",
-                "contactType": "Customer Service"
-            },
-            "address": {
-                "@type": "PostalAddress",
-                "streetAddress": "123 TechEdilite St.",
-                "addressLocality": "Tech City",
-                "addressRegion": "TX",
-                "postalCode": "12345",
-                "addressCountry": "US"
-            }
-        }
-    </script>
+<!-- FAQ Schema for common searches -->
+<script type="application/ld+json">
+{
+ "@context": "https://schema.org",
+ "@type": "FAQPage",
+ "mainEntity": [
+   {
+     "@type": "Question",
+     "name": "Is TechEdilite and Tech Edilite the same company?",
+     "acceptedAnswer": {
+       "@type": "Answer",
+       "text": "Yes, TechEdilite and Tech Edilite refer to the same software development company located in Hosur, Tamil Nadu. The company is also known as TECHEDILITE."
+     }
+   },
+   {
+     "@type": "Question",
+     "name": "What does TechEdilite specialize in?",
+     "acceptedAnswer": {
+       "@type": "Answer",
+       "text": "TechEdilite specializes in affordable software development, including BuildPulse construction management app and UnitPulse inventory management system."
+     }
+   }
+ ]
+}
 
     <!-- Additional Custom Styles -->
     <style>
