--- a/index.html
+++ b/index.html
@@ -4714,7 +4714,7 @@
 
 
 <!-- Chat Module -->
-<div id="chatModule" class="fixed top-20 right-4 sm:right-4 z-50">  <!-- Chat Toggle Button -->
+<div id="chatModule" class="fixed bottom-24 left-4 sm:left-6 z-50">
   <button id="chatToggle" class="bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white rounded-full p-4 shadow-lg transition-all duration-300 transform hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300">
     <svg id="chatIcon" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
@@ -4725,8 +4725,7 @@
   </button>
 
   <!-- Chat Window -->
-<div id="chatWindow" class="hidden absolute top-16 right-0 w-80 sm:w-96 bg-white rounded-2xl shadow-2xl border border-gray-200 overflow-hidden">    <!-- Chat Header -->
-    <div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-4">
+<div id="chatWindow" class="hidden absolute bottom-16 left-0 w-80 sm:w-96 bg-white rounded-2xl shadow-2xl border border-gray-200 overflow-hidden">    <div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-4">
       <div class="flex items-center space-x-3">
         <div class="w-10 h-10 bg-white/20 rounded-full flex items-center justify-center">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -4858,18 +4857,19 @@
 
 /* Responsive adjustments */
 /* Responsive adjustments */
+/* Responsive adjustments */
 @media (max-width: 640px) {
   #chatModule {
-    right: 1rem !important;
+    left: 1rem !important;
+    bottom: 6rem !important;
   }
   
   #chatWindow {
     width: calc(100vw - 2rem);
-    right: 0;
-    left: auto;
+    left: 0;
+    right: auto;
   }
 }
-
 /* Typing indicator */
 .typing-indicator {
   display: flex;
